@@ -1,3 +1,7 @@
+Mon Nov  8 18:40:55 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>
+
+	* doc/deep-connect.{rd,html}: ちょっと充実化した.
+
 Thu Nov  4 21:58:30 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>
 
 	* doc/deep-connect.{rd,html}: ちょっと修正
